feat: return full grade history on grade delete
