# src/main/java/org/cocojojo/mg/endpoint/rest/controller/GradeController.java
@@ -9,7 +9,6 @@ import org.cocojojo.mg.endpoint.rest.controller.dto.GradeHistoryResponse;
 import org.cocojojo.mg.endpoint.rest.controller.dto.GradeRequest;
 import org.cocojojo.mg.endpoint.rest.controller.dto.GradeResponse;
 import org.cocojojo.mg.service.GradeService;
-import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
@@ -17,7 +16,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -62,9 +60,9 @@ public class GradeController {
   }
 
   @DeleteMapping("/grades/{gradeId}")
-  @ResponseStatus(HttpStatus.NO_CONTENT)
-  public void delete(@PathVariable UUID gradeId, @RequestParam String reason) {
-    gradeService.delete(gradeId, reason);
+  public List<GradeHistoryResponse> delete(
+      @PathVariable UUID gradeId, @RequestParam String reason) {
+    return gradeService.delete(gradeId, reason);
   }
 
   @GetMapping("/grades/{gradeId}/history")
